--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body{
     font-family: 'Poppins', sans-serif;
-}
-header{
+    padding: 0px;
+    margin: 0px;
     background: linear-gradient(to right, #121212
     , #7f00ff);
-    text-align: center;
-    padding: 60px;
-
-
+    text-align: left;
+    margin: 0px 100px;
 }
+
+  
 h1{
     font-style: Arial;
     font-size: 48px;
@@ -17,5 +17,86 @@ h1{
 p{
     font-size: 20px;
     color: #cccccc;
-    margin-top: 10px;
+
+}
+
+.About{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.About img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 25%;
+    border:  4px solid #4b0082;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    margin: 0 auto 20px;
+
+
+
+}
+.About p{
+    max-width: 600px;
+    margin: 0;
+}
+.skill i{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    font-size: 50px;
+    margin: 10px 20px; 
+}
+.skill-category h3{
+    font-size: 24px;
+    color:  #cccccc ;
+    margin-bottom: 20px;
+
+}
+.skills h2{
+    color:  #cccccc ;
+    margin-top: 100px;
+}
+
+.fab.fa-python {
+    color: #306998; /* Python official color */
+}
+
+.fab.fa-js {
+    color: #F7DF1E;
+}
+
+.fab.fa-html5 {
+    color: #E34F26; 
+}
+
+
+.fab.fa-css3-alt {
+    color: #1572B6; 
+}
+
+.fab.fa-github {
+    color: #f3eeee; 
+}
+
+
+.vscode-icon{
+    width: 45px;
+    height: 40px;
+    margin: 10px 20px;
+    
+}
+.skills{
+    margin-top: 20px;
+}
+.skill-category{
+ margin-bottom: 30px;
+}
+.skill{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
